--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -69,7 +69,7 @@
 }
 
 #login-container h1{
-    margin-top: 20%;
+    margin-top: 34vh;
 }
 
 .modal-header{
@@ -103,8 +103,4 @@
 .form-control::placeholder{
     color: #090;
 }
-@media only screen and (max-width: 600px) {
-    #login-container h1{
-        margin-top: 50%;
-    }
-} 
+
