--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,6 +1,6 @@
 #login {
     background-color: black;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #login-btn{
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 34vh;
 }
 
 .btn-primary{
@@ -68,9 +69,11 @@
     box-shadow: none;
 }
 
-#login-container h1{
+
+
+/* #login-container h1{
     margin-top: 34vh;
-}
+} */
 
 .modal-header{
     border-bottom: none;
@@ -102,5 +105,34 @@
 
 .form-control::placeholder{
     color: #090;
+}
+
+.is-invalid::placeholder{
+    color: #900 !important;
+}
+
+.blinking{
+    color: #f4ff00;
+    font-size: 18px;
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
+
+@media (min-width: 992px) {
+
+    #login-container{
+        margin-top: 22vh;
+        padding: 72px;
+        border: 1px solid #0f0;
+        margin-left: 200px;
+        margin-right: 200px; 
+    }
+    
+
 }
 
